--- a/영화관람등급연습/css/style.css
+++ b/영화관람등급연습/css/style.css
@@ -2,82 +2,37 @@
   padding:0px;
   margin:0px;
 }
+#age-box{
 
-.age12{
+}
+a{
+  text-decoration:none;
+}
+li{
+  list-style:none;
+}
+
+li>span{
+  float:left;
+}
+
+.ico_age_age_12{
   display:block;
   width: 20px; height: 20px;
-  background: url('../../HTML+CSS/image/sp_rank.png') 2px 2px;
+  background: url('../../HTML+CSS/image/sp_rank.png') 1px 0px;
 }
-
-#header{
-  width:630px;
-  height:35px;
-  padding-top:13px;
+.ico_age_age_15{
+  display:block;
+  width: 20px; height: 20px;
+  background: url('../../HTML+CSS/image/sp_rank.png') -30px 0px;
 }
-
-.border{
-  border:1px solid #c8c9d2;
+.ico_age_age_adult{
+  display:block;
+  width: 20px; height: 20px;
+  background: url('../../HTML+CSS/image/sp_rank.png') -63px 0px;
 }
-
-.display{
-  display:flex;
-  justify-content: center;
-}
-
-header>h1{
-  font-size:13px;
-  display:inline;
-  margin:0 0 0 17px;
-}
-
-header>a{
-  font-size:13px;
-  padding:0 9 0 14px;
-  text-decoration:none;
-  color:black;
-  margin-left:8px;
-}
-
-#main{
-  width:630px;
-  height:620px;
-  background-color: bisque;
-}
-
-#main>#title{
-  width:183px;
-  height:620px;
-  background-color: aqua;
-  float:left;
-}
-
-#title>#thor{
-  width:183px;
-  height:175px;
-  border-bottom:1px solid #f3f3f3;
-}
-
-#title>#city{
-  width:183px;
-  height:100px;
-  border-bottom:1px solid #f3f3f3;
-}
-
-#title>#witch{
-  width:183px;
-  height:35px;
-  border-bottom:1px solid #f3f3f3;
-}
-
-#age-box12{
-  width:20px;
-  height:20px;
-  float:left;
-  margin:80px 3px 0 10px;
-}
-
-.ctitle{
-  display: block;
-  text-decoration:none;
-  margin-top:80px;
+.ico_age_age_all{
+  display:block;
+  width: 20px; height: 20px;
+  background: url('../../HTML+CSS/image/sp_rank.png') -93px 0px;
 }
