--- a/웹디자인_연습/1번_JUST쇼핑몰/css/style.css
+++ b/웹디자인_연습/1번_JUST쇼핑몰/css/style.css
@@ -2,7 +2,7 @@
   /* 
   *은 all을 뜻함
   모든 요소 마진, 패딩 제거 */
-  margin:0;
+  margin:0 auto;
   padding:0;
 }
 
@@ -19,80 +19,5 @@ a{
 #wrap{
   width:1200px;
   height:700px;
-  background-color: aqua;
-}
-
-#header{
-  height: 100px;
-  background-color: aquamarine;
-}
-
-#header>#logo{
-  width:200px;
-  height: 100px;  
-  background-color: cadetblue;
-  float:left; /*왼쪽부터 가로배치*/
-}
-
-#header>#nav{
-  width:1000px;
-  height: 100px;
-  background-color: darkgoldenrod;
-  float:left;
-}
-
-#slide{
-  height:300px;
-  background-color: blueviolet;
-}
-
-#contents{
-  height: 200px;
-  background-color: brown;
-}
-
-#contents>#cont1{
-  width: 480px;
-  height: 200px;
-  background-color: forestgreen;
-  float: left;
-}
-
-#contents>#cont2{
-  width: 360px;
-  height: 200px;
-  background-color: silver;
-  float:left;
-}
-
-#contents>#cont3{
-  width: 360px;
-  height: 200px;
-  background-color: chartreuse;
-  float: left;
-}
-#footer{
-  height: 100px;
-  background-color: sandybrown;
-}
-
-#footer>#logo{
-  width: 200px;
-  height: 100px;
-  background-color: gold;
-  float:left;
-}
-
-#footer>#copy{
-  width: 800px;
-  height: 100px;
-  background-color: blue;
-  float:left;
-}
-
-#footer>#sns{
-  width: 200px;
-  height: 100px;
-  background-color: rgb(235, 36, 10);
-  float:left;
+  background-color: #fff;
 }
