--- a/웹디자인_연습/2번_GREEN복지재단/css/contents.css
+++ b/웹디자인_연습/2번_GREEN복지재단/css/contents.css
@@ -22,6 +22,7 @@
 #notices>#contents{
     width:400px;
     height:150px;
+    border:1px solid black;
 }
 #notices>#contents>ul>li{
     position: relative;
@@ -67,6 +68,7 @@
     position:absolute;
     width:100%;
     height:150px;
+    border:1px solid black;
 }
 #gallery-container>ul{
     margin-top: 15px;
