--- a/웹디자인_연습/3번_강원천문대/css/style.css
+++ b/웹디자인_연습/3번_강원천문대/css/style.css
@@ -1,73 +1,87 @@
+*{
+    margin:0 auto;
+    padding: 0;
+}
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
+
 #wrap{
-  width: 1200px;
-  height: 700px;
-  background-color: antiquewhite;
+    width: 1200px;
+    height: 700px;
+    background-color: aquamarine;
+}
+header{
+    width: 1200px;
+    height: 100px;
+}
+header>#logo{
+    width:200px;
+    height: 100px;
+    background-color: aquamarine;
+    float:left;
+}
+header>#nav{
+    width:1000px;
+    height: 100px;
+    background-color: bisque;
+    float: left;
+}
+main{
+    width:1200px;
+    height: 500px;
+}
+main>#slide{
+    width:1200px;
+    height: 300px; 
+    background-color: yellow;
+}
+main>#contents{
+    width: 1200px;
+    height: 200px;
+}
+#contents>#con1{
+    width: 500px;
+    height: 200px;
+    background-color: violet;
+    float: left;
+}
+#contents>#con2{
+    width:400px;
+    height: 200px;
+    background-color: tomato;
+    float: left;
+}
+#contents>#con3{
+    width: 300px;
+    height: 200px;
+    background-color: thistle;
+    float: left;
+}
+footer{
+    width:1200px;
+    height: 100px;
+}
+footer>#logo{
+    width: 200px;
+    height: 100px;
+    background-color: slategrey;
+    float: left;
+}
+footer>#footer-menu{
+    width: 1000px;
+    height: 50px;
+    background-color: royalblue;
+    float: left;
+}
+footer>#copy{
+    width: 1000px;
+    height: 50px;
+    background-color: rgb(20, 155, 47);
+    float: left;
 }
 
-#header{
-  height: 100px;
-  width:1200px;
-  background-color: aliceblue;
-}
 
-#header>#logo{
-  height: 100px;
-  width: 200px;
-  background-color: aquamarine;
-  float:left;
-}
-
-#header>#menu{
-  height: 100px;
-  width: 1000px;
-  background-color: aqua;
-  float:left;
-}
-
-#slide{
-  height: 300px;
-  width: 1200px;
-  background-color: bisque;
-}
-
-#contents>#noti{
-  height: 200px;
-  width: 700px;
-  background-color: blue;
-  float:left;
-}
-
-#contents>#ban{
-  height: 200px;
-  width: 300px;
-  background-color: salmon;
-  float:left;
-}
-
-#contents>#dir{
-  height: 200px;
-  width: 200px;
-  background-color: sandybrown;
-  float:left;
-}
-
-#footer>#logo{
-  height: 100px;
-  width: 400px;
-  background-color: rebeccapurple;
-  float:left;
-}
-
-#footer>#botmenu{
-  height: 50px;
-  width: 800px;
-  background-color: hotpink;
-  float:left;
-}
-
-#footer>#copy{
-  height: 50px;
-  width: 800px;
-  background-color: darkblue;
-  float:left;
-}
