--- a/웹디자인_연습/1번_JUST쇼핑몰/css/popup.css
+++ b/웹디자인_연습/1번_JUST쇼핑몰/css/popup.css
@@ -6,6 +6,7 @@
   height: 500px;
   z-index: 9;   /* 제일 위에 띄운다.(우선도) */
   border:1px solid #222328;
+  /* display : none; */
 }
 
 #popup>#popup-img{
