--- a/jquery/네이버 로그인창/틀 완성/css/style.css
+++ b/jquery/네이버 로그인창/틀 완성/css/style.css
@@ -16,10 +16,12 @@ body{
 }
 
 #wrap
-{
+{   position : relative;
     width:100%;
     height:100%;
+    padding-right: 20%;
     background:rgb(245, 246, 247);
+    /* background-color: antiquewhite; */
 }
 
 #wrap>#header
