--- a/Front_React_Example/my-react-practice/src/App.css
+++ b/Front_React_Example/my-react-practice/src/App.css
@@ -38,8 +38,27 @@
 } */
 
 .App{
-  width:1000px;
-  height:1000px;
+  width:100%;
+  height:700px;
   background-color: antiquewhite;
   margin:0 auto;
+}
+
+ul{
+  list-style: none;
+  padding:0;
+}
+
+li{
+  list-style: none;
+}
+
+li>a{
+  display:block;
+  background-color: darkgray;
+}
+
+a{
+  text-decoration: none;
+  color:black;
 }
