--- a/Front_React_Example/my-react-practice/src/css/Header.css
+++ b/Front_React_Example/my-react-practice/src/css/Header.css
@@ -1,5 +1,71 @@
+
 #header{
   width:100%;
   height:100px;
+  display:flex;
   background-color: aquamarine;
+}
+
+#header>#header_logo{
+  width:20%;
+  height:100%;
+  background-color: darkslateblue;
+}
+
+#header>#nav{
+  width: 80%;
+  height: 100%;
+  background-color: darkgoldenrod;
+}
+
+#nav>#lnb{
+  margin-left: 45%;
+  margin-top:50px;
+  width:50%;
+  height:30px;
+  display:flex;
+  justify-content: space-around;
+  background-color: crimson;
+}
+
+#lnb>li{
+  background-color: tomato;
+  width:25%;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+#lnb>li>a{
+  font-size: 1.15em;
+  font-weight: 480;
+  background-color: brown;
+  height:30px;
+  padding-top:3px;
+  box-sizing: border-box;
+}
+
+#lnb>:first-child>a:hover{
+  background-color: aquamarine;
+}
+
+#lnb>:nth-child(2)>a:hover{
+  background-color: aquamarine;
+}
+
+#lnb>:nth-child(3)>a:hover{
+  background-color: aquamarine;
+}
+
+#lnb>:nth-child(4)>a:hover{
+  background-color: aquamarine;
+}
+
+#lnb>li>ul{
+  display:none;
+}
+
+@media all and (max-width: 768px){
+  #nav>#lnb{
+    display:none;
+  }
 }
