--- a/Front_React_Example/my-react-practice/src/App.css
+++ b/Front_React_Example/my-react-practice/src/App.css
@@ -42,8 +42,10 @@
   height:700px;
   background-color: antiquewhite;
   margin:0 auto;
+  padding-left: 38%;
+  padding-top: 10%;
+  box-sizing: border-box;
 }
-
 ul{
   list-style: none;
   padding:0;
@@ -64,14 +66,65 @@ a{
 }
 
 .art{
-  width:150px;
+  width:100%;
   height:50px;
   border-bottom: 1px solid darkgray;
-  padding-top: 5px;
+  padding-top: 12px;
+  padding-left: 10px;
   background-color: wheat;
+  box-sizing: border-box;
 }
 
 .art:first-child{
   border-top: 1px solid darkgray;
   margin-top: 15px;
+}
+
+.wrap{
+  width:350px;
+  border:1px solid black;
+  position:relative;
+}
+
+.inputBox{
+  margin-top: 10px;
+  position: relative;
+  width:200px;
+  height: 30px;
+  margin-right: 6px;
+  margin-left: 10px;
+}
+
+.sel{
+  display: inline-block;
+  position: relative;
+  height:25px;
+  margin-left: -2px;
+  margin-right: 2px;
+  top:0px;
+}
+.change{
+  position: absolute;
+  display: inline-block;
+  height:25px;
+  top:15px;
+}
+
+.sort{
+  margin-top: 10px;
+  margin-right: 9px;
+  position: absolute;
+  right:0px;
+}
+
+@keyframes color{
+  0%{
+    background-color: wheat;
+  }
+  50%{
+    background-color: burlywood;
+  }
+  100%{
+    background-color: wheat;
+  }
 }
